package switch2021.project.dto;



public class UserProfileDTO {

    /**
     * Attributes
     **/
    public String userProfileName;

}