
@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide circle

title Domain Model
package Model {


package Project {
class Project <<root>>{
}
class ProjectStatus <<ENUM>>{
}
}


package Sprint {
class Sprint <<root>>{
}
class ScrumBoard{
}
class UserStoryOfSprintStatus <<ENUM>>{
}
class UserStoryOfSprint <<VO>>{
}
}


package UserStory {
class UserStory <<root>>{
}
}


package Task {
class Task <<root>>{
}
class TaskEffort <<VO>>{
}
class TaskType <<ENUM>>{
}
class TaskStatus <<ENUM>>{
}
}


package SystemUser {
class SystemUser <<root>>{
}
class Request <<VO>>{
}
}


package Typology {
class Typology <<root>>{
}
}


package UserProfile {
class UserProfile <<root>>{
}
}


package Resource{
class Resource <<root>>{
}
class ProjectRole <<VO>>{
}
}


'package Value-Object {
'class Description <VO>{
'}
class ProjectID <<VO>>{
}
class SystemUserID <<VO>>{
}
'class Name <VO>{
'}
'class CostPerHour <VO>{
'}
'class PercentageOfAllocation <VO>{
'}
'class ProjectRole <VO>{
'}
'class Photo <VO>{
'}
'class Function <VO>{
'}
'class Password <VO>{
'}
'class TaskEffort <VO>{
'}
'class Effort_Hour <VO>{
'}
'class Effort_Date <VO>{
'}
'class Comment <VO>{
'}
'class Attachment <VO>{
'}
'class Effort_Minutes <VO>{
'}
'class TaskStatus <VO>{
'}
'class TaskType <VO>{
'}
'class Title_UserStory <VO>{
'}
'class UserStoryStatus <VO>{
'}
'class BusinessSector <VO>{
'}
'class Customer <VO>{
'}
'class ProjectCode <VO>{
'}
'class Budget <VO>{
'}
'class SprintDuration <VO>{
'}
'class NumberOfSprints <VO>{
'}
'class ProjectStatus <VO>{
'}
class UserStoryID <<VO>>{
}
class ResourceID <<VO>>{
}
class SprintID <<VO>>{
}
class UserProfileID <<VO>>{
}
class TypologyID <<VO>>{
}
'}
'}

SystemUser "1" --> "1" SystemUserID
Request "1" --> "1" UserProfileID
UserProfile "1" --> "1" UserProfileID
SystemUser "1" --> "1..*" UserProfileID
Resource "1" --> "1" SystemUserID
Resource "*" --> "1" ProjectID
Resource "1" --> "1" ResourceID
Resource "1" --> "1" ProjectRole
Sprint "1" -up-> "1" SprintID
Project "1" --> "1" ProjectID
UserStory "1" --> "1" ProjectID
Project "1" --> "1" TypologyID
Project "1" --> "1" ProjectStatus
Typology "1" --> "1" TypologyID
UserStory "1" --> "1" UserStoryID
Sprint "1" --> "1" ScrumBoard
ScrumBoard "1" --> "1" UserStoryOfSprint
UserStoryOfSprint "1" --> "1" UserStoryOfSprintStatus
Task "1" --> "1" ResourceID
Task "1" --> "1" TaskEffort
Task "1" --> "1" TaskStatus
Task "1" --> "1" TaskType



@enduml

